[gd_scene load_steps=4 format=3 uid="uid://da5f8i13ntwvp"]

[ext_resource type="FontFile" uid="uid://bb23wnokspyyl" path="res://assets/ZenMaruGothic-Black.ttf" id="1_4b0mw"]
[ext_resource type="Script" uid="uid://c1q4rhcje2d2d" path="res://scripts/ui/yaku.gd" id="1_pe5cp"]
[ext_resource type="Theme" uid="uid://dxx5m48t8ucyq" path="res://koi_koi_theme.tres" id="2_pe5cp"]

[node name="Yaku" type="VBoxContainer"]
script = ExtResource("1_pe5cp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="EnglishLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_pe5cp")
theme_override_colors/font_color = Color(0.3529412, 0.73333335, 0.99607843, 1)
theme_override_font_sizes/font_size = 24
text = "English"

[node name="JapaneseLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_pe5cp")
theme_override_colors/font_color = Color(0.3529412, 0.73333335, 0.99607843, 1)
theme_override_fonts/font = ExtResource("1_4b0mw")
theme_override_font_sizes/font_size = 20
text = "日本語"

[node name="CardsContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
